# deep-learning-recap

./: Makefile  README.md  pyproject.toml
tensorflow/image_classification/: mnist.py
tensorflow/text_classification/: basic_text_classification.py  text_classification_tensorhub.py
