[tool.poetry]
name = "ml_recap"
description = "recap ml concepts"
version = "0.0.0"
authors = ["Isaac Reis"]
maintainers = ["Isaac Reis"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.1.4"
numpy = "1.23.4"
scikit-learn = "^0.24.1"
tensorflow = "2.10.0"
tensorflow-hub = "0.12.0"
tensorflow-datasets = "~4.7.0"
#torch = "1.12.1"